# web-scrapper-FII

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
batch/extract_fiis/: extract_fiis.py  extract_taxas.py
batch/transform/: transform_fiis.py
data/raw/: planilha_geral_fii.xlsx  planilha_geral_fii_2024-01-25.csv
