[tool.poetry]
name = "web-scrapper-fii"
version = "0.1.0"
description = ""
authors = ["Clayton de Almeida Campos <clayton.almeida.campos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "2.1.2"
selenium = "^4.16.0"
openpyxl = "3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
